[package]
name = "Problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "Problem_859"
path = "src/Problem_859.rs"

[[bin]]
name = "Problem_863"
path = "src/Problem_863.rs"

[[bin]]
name = "Problem_100"
path = "src/Problem_100.rs"

[[bin]]
name = "Problem_1"
path = "src/Problem_1.rs"

[[bin]]
name = "Problem_2"
path = "src/Problem_2.rs"

[[bin]]
name = "Problem_3"
path = "src/Problem_3.rs"

[[bin]]
name = "Problem_2239"
path = "src/Problem_2239.rs"

[[bin]]
name = "Problem_1768"
path = "src/Problem_1768.rs"
